--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,7 +2,7 @@ import { DefaultLayout } from "../components/layouts/DefaultLayout"
 
 ## BraceBracket
 
-<img src="https://wolphtype.com/img/materials/example.png" style={{width:"600px"}}/>
+<img src="https://wolphtype.com/img/materials/example.png" style={{width:"600px"}} alt="sample"/>
 
 BraceBracketは格闘ゲームにおけるスコアボードを動的に表示するツールです。OBSなどのWebページを表示する配信ソフトで使うことができ、jsonおよびGoogleスプレッドシートを使ってデータを編集するためリモートでの編集が可能です。
 中–大規模の大会よりも、小規模な大会や対戦会、窓対抗戦やサーバー内大会などをターゲットに制作しています。
