--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -64,7 +64,7 @@ import styles from "./usage.module.scss"
 
     #### スコアの編集と共有
 
-    **「編集画面を開く」** ボタンを選択すると別ウインドウが開き、スコアボードの内容を編集できます。（詳細はこちら） **編集画面共有URL** を共有することで、リモートや会場内の他のデバイスからスコアボードを編集することがきます（編集画面は内容を適用するごとに同期されます）。ただし、編集画面にパスワードをかけることなどはできず、URLを知っている人は誰でもスコアを編集できるようになってしまうため、流出にはご注意ください。また、ダッシュボードもURLを共有することで他のデバイスで開くことが可能です。
+    **「編集画面を開く」** ボタンを選択すると別ウインドウが開き、スコアボードの内容を編集できます。（詳細は<Scroll smooth={true} duration={500} offset={-100} className="cursor-pointer" to="edit">こちら</Scroll>） **編集画面共有URL** を共有することで、リモートや会場内の他のデバイスからスコアボードを編集することがきます（編集画面は内容を適用するごとに同期されます）。ただし、編集画面にパスワードをかけることなどはできず、URLを知っている人は誰でもスコアを編集できるようになってしまうため、流出にはご注意ください。また、ダッシュボードもURLを共有することで他のデバイスで開くことが可能です。
 
     <span id='dashboard__remote'></span>
 
