--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -277,7 +277,7 @@ import styles from "./usage.module.scss"
 
 export default ({children}) => <>
   <Head>
-    <title>BraceBracket | Top</title>
+    <title>BraceBracket | How to Use</title>
   </Head>
   <DefaultLayout>
     <div className="markdown">
