--- a/pages/help.mdx
+++ b/pages/help.mdx
@@ -10,7 +10,7 @@ import styles from "./help.module.scss"
     <ul className={styles.helpbox}>
       <li>
         #### BraceBracketを使用するにあたり、使用許可や支払いなどは必要ですか？
-        BraceBracketはオープンソースで公開されているため、無料でご自由にご利用いただけます。BraceBracketは今後も開発を続けていく予定ですので、よろしければYoutubeの概要欄や配信内での紹介、[Discord](https://discord.gg/TgMFQEqxY9)やGoogle Formでのフィードバックをいただけたら幸いです。
+        BraceBracketはオープンソースで公開されているため、無料でご自由にご利用いただけます。BraceBracketは今後も開発を続けていく予定ですので、よろしければYoutubeの概要欄や配信内での紹介、[Discord](https://discord.gg/TgMFQEqxY9)や[Google Form](https://forms.gle/jkJKeiQdDQvwuC6A7)でのフィードバックをいただけたら幸いです。
       </li>
       <li>
         #### デザインのカスタマイズはできますか？
@@ -22,7 +22,7 @@ import styles from "./help.module.scss"
       </li>
       <li>
         #### バグ及び不具合を見つけました。
-        Google Form, [Discord](https://discord.gg/TgMFQEqxY9)もしくはTwitter [@wolphtype](https://twitter.com/wolphtype)までご連絡ください。できる限り早く対応いたします。
+        [Google Form](https://forms.gle/jkJKeiQdDQvwuC6A7), [Discord](https://discord.gg/TgMFQEqxY9)もしくはTwitter [@wolphtype](https://twitter.com/wolphtype)までご連絡ください。できる限り早く対応いたします。
       </li>
       <li>
         #### 配信ソフト用ブラウザソースURLを配信ソフトに配置しましたが、表示されません。
