--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -16,7 +16,7 @@ import styles from "./usage.module.scss"
 
     ### スコアボードを作成する
 
-    早速、ページ右上の[スコアボードを作成する](../create "スコアボードを作成")からスコアボードを作成していきましょう。スコアボードを作成するCreate画面ではスコアボードの色やstartggとの連携などを設定する必要がありますが、これらの設定は後でも変更できます。
+    早速、ページ右上の[スコアボードを作成する](../create "スコアボードを作成")からスコアボードを作成していきましょう。スコアボードを作成するCreate画面ではスコアボードの色やstart.ggとの連携などを設定する必要がありますが、これらの設定は後でも変更できます。
 
     <span id='create__layout'></span>
 
