--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -13,6 +13,13 @@ import styles from "./index.module.scss"
   <Link href={`/create`}>
       <a className={styles.createLink}>スコアボードを作成</a>
   </Link>
+  <div className="columns is-centered">
+    <div className="column is-12-desktop is-10-widescreen is-9-fullhd">
+      <video src="/image/top/bracedemo.webm" autoPlay loop muted playsInline> </video>
+    </div>
+  </div>
+  
+  
 </div>
 
 <div className={styles.layouts}>
