--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -278,6 +278,13 @@ import styles from "./usage.module.scss"
 export default ({children}) => <>
   <Head>
     <title>BraceBracket | How to Use</title>
+    <meta property="og:url" content="https://bracebracket.app/usage/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="BraceBracketは、Webベースの対戦ゲーム用スコアボードツールです。OSを問わず、ブラウザ上でスコアボードを作成・編集できます。" />
+    <meta property="og:site_name" content="BraceBracket" />
+    <meta property="og:image" content="https://bracebracket.app/image/ogp.jpg" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@wolphtype" />
   </Head>
   <DefaultLayout>
     <div className="markdown">
