--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,7 +15,7 @@ import styles from "./index.module.scss"
   </Link>
   <div className="columns is-centered">
     <div className="column is-12-desktop is-10-widescreen is-9-fullhd">
-      <video src="/image/top/bracedemo.webm" autoPlay loop muted playsInline> </video>
+      <video src="/image/top/bracedemo3.webm" autoPlay loop muted playsInline> </video>
     </div>
   </div>
   
@@ -128,7 +128,7 @@ import styles from "./index.module.scss"
 
           <div className={styles.reflexcenter}>
         <Image
-          src="/image/top/icon_numasuma.jpg"
+          src="/image/top/icon_egs.png"
           alt="EGS"
           width="60"
           height="60"
@@ -178,7 +178,7 @@ import styles from "./index.module.scss"
         </div>
       </div>
       <blockquote>
-        ああああああああああああああああああああああああああああああ
+        BraceBracketの魅力はタスクをより簡単にしつつ、思い描いた構成を作ることができる、ということです。細かく用意されているシーンは、今まで以上に質の高い配信に拘りたくなります。
       </blockquote>
     </div>
     <div className="column">
