--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,7 +15,10 @@ import styles from "./index.module.scss"
   </Link>
   <div className="columns is-centered">
     <div className="column is-12-desktop is-10-widescreen is-9-fullhd">
-      <video src="/image/top/bracedemo3.webm" autoPlay loop muted playsInline> </video>
+      <video autoPlay loop muted playsInline>
+        <source src="/image/top/bracedemo0.webm" />
+        <source src="/image/top/bracedemo0.mp4" />
+      </video>
     </div>
   </div>
   
