edit help and usage

--- a/pages/help.mdx
+++ b/pages/help.mdx
@@ -36,9 +36,9 @@ import Image from 'next/image'
         以下をお試しください。
 
         * 配信ソフトでのソース再読み込み
-        * ブラウザでそのURLを開き、表示されているか確認
+        * ブラウザでコピーしたURLを開き、表示されているか確認
         * スコアボードの作成し直し
-        * MCレイアウトの場合、MCを入力しているかどうか（何も入力していない場合、MCレイアウトは表示されません）
+        * MCレイアウトの場合、MCを入力しているかどうか確認（何も入力していない場合、MCレイアウトは表示されません）
         
         これらをお試しいただいても改善されない場合、[Discord](https://discord.gg/TgMFQEqxY9)までご連絡ください。
       </li>
