--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -140,9 +140,10 @@ import styles from "./index.module.scss"
   <div className="columns is-centered">
     <div className="column is-12-tablet is-10-desktop">
       <div className={styles.mainreview}>
-         ### 「あああ」
+         ### 「憧れのあの機能を手軽に導入できます。」
 
-          あああああ
+          実装の難しいTop8トーナメントの表示やIntervalの表示をBraceBracket一つで実現出来ます。  
+          低い導入コストに対して高いパフォーマンスが得られると感じました。
 
           <div className={styles.reflexcenter}>
         <Image
@@ -214,7 +215,7 @@ import styles from "./index.module.scss"
         </div>
       </div>
       <blockquote>
-        あああああああ
+        オペレーターが不足しがちな平日大会にとって、遠隔でもスコアボードの更新が可能なのはとても魅力的です。スコアボードの名前入力もstart.ggから参照できてすごく便利です。
       </blockquote>
     </div>
     
