--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -142,17 +142,23 @@ import styles from "./usage.module.scss"
 
     #### 配信ソフトでのシーン設定例
 
-    BraceBracketでは、一般的な試合中にスコアボードであるScore Layoutの他に3種類のレイアウトが用意されています。試合間に現在の試合の情報および次の試合の情報を表示するInterval Layout, 実況者やMCの情報を表示するMC Layout, そしてTop8の情報を表示するTop8 Layoutです（Top8 Layoutはstart.gg連携をしていないと使用できません）。大会の規模や配信スタッフの人員に応じて、以下の画像のように設定することを想定しています。
+    BraceBracketでは、4種類のレイアウトが用意されています。
+    1. Score Layout: 試合中に表示するスコアボード
+    2. Interval Layout: 試合間に現在の試合の情報および次の試合の情報を表示
+    3. MC Layout: 実況者やMCの情報を表示
+    4. Top8 Layout: start.ggと連携し、Top8の情報を表示
+
+    大会の規模や配信スタッフの人員に応じて、以下の画像のように設定することを想定しています。
 
     ![配信の規模に合わせてさまざまなレイアウトが可能](/image/usage/situation.jpg)
 
-    Score Layoutは試合中のみ表示し、試合間はInterval Layoutで現在の試合状況および次の試合情報を表示します。MC Layout及びTop8 LayoutはInterval Layoutと同時に表示することが可能です。進行中にOBS側で表示と非表示を切り替えるのではなく、あらかじめ上のようなシーンを作成し、切り替えて使用することをお勧めいたします。
+    MC Layout及びTop8 LayoutはInterval Layoutと同時に表示することが可能です。あらかじめ上のようなシーンを配信ソフトで作成し、切り替えて使用することをお勧めいたします。
 
     <span id='edit'></span>
 
     ### スコアを編集する
 
-    ダッシュボードの **編集画面を開く** を押すと新しいウインドウ、もしくはタブが立ち上がり、その画面からスコアを編集することができます。
+    ダッシュボードの **編集画面を開く** を押すと新しく編集画面が立ち上がり、その画面からスコアを編集することができます。
 
     <div className='columns is-variable is-6'>
       <div className='column'>
@@ -240,7 +246,7 @@ import styles from "./usage.module.scss"
       </div>
     </div>
 
-    スコアの編集内容は「適用する」をクリックするたびに他の編集者とも同期されます。一般的なオフ大会だけでなく、窓対抗戦などのオンライン大会や身内企画などで幅広く使えますが、URLの流出にはご注意ください。
+    スコアの編集内容は「適用する」をクリックするたび他の編集者とも同期されます。一般的なオフ大会だけでなく、窓対抗戦などのオンライン大会や身内企画などで幅広く使えますが、URLの流出にはご注意ください。
 
     <span id='custom'></span>
 
