--- a/pages/help.mdx
+++ b/pages/help.mdx
@@ -91,6 +91,7 @@ import Image from 'next/image'
 export default ({children}) => <>
   <Head>
     <title>BraceBracket | Help</title>
+    <meta property="og:title" content="BraceBracket | Help" />
     <meta property="og:url" content="https://bracebracket.app/help/" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="BraceBracketは、Webベースの対戦ゲーム用スコアボードツールです。OSを問わず、ブラウザ上でスコアボードを作成・編集できます。" />
