fix: React 19 + Next.js 15のJSXランタイム互換性を修正
- tsconfig.jsonにjsxImportSourceを追加
- next.config.jsでReact 19のcompiler設定を追加
- yarnキャッシュをクリアして依存関係を再インストール
- ビルドが成功するようになった

残り: E2Eテストでcreateページの要素が見つからない問題を調査中

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,8 +10,8 @@ import styles from "./index.module.scss"
   ブラウザ上でデザインを選択、ロゴを配置、start.ggとの連携まで。  
   場所を問わずスコアの編集ができるスコアボード、BraceBracket（ブレースブラケット）
 
-  <Link href={`/create`}>
-      <a className={styles.createLink}>スコアボードを作成</a>
+  <Link href={`/create`} className={styles.createLink}>
+      スコアボードを作成
   </Link>
   <div className="columns is-centered">
     <div className="column is-12-desktop is-10-widescreen is-9-fullhd">
