--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -69,7 +69,7 @@ import styles from "./usage.module.scss"
 
     #### カメラとTwitterIDの表示設定
 
-    **「カメラ及び選手のTwitter IDを表示する」** にチェックを入れると、スコアボードのレイアウトにプレイヤーカメラ配置用のガイドとTwitter IDの表示ボックスが追加され、スコアボードの編集画面にTwitter IDの編集欄が追加されます。プレイヤーカメラをガイドに対して正確に配置したい時は、<Link href='help#help-camera'><a>こちら</a></Link>を参照してください。
+    **「カメラ及び選手のTwitter IDを表示する」** にチェックを入れると、スコアボードのレイアウトにプレイヤーカメラ配置用のガイドとTwitter IDの表示ボックスが追加され、スコアボードの編集画面にTwitter IDの編集欄が追加されます。プレイヤーカメラをガイドに対して正確に配置したい時は、<Link href='help#help-camera'>こちら</Link>を参照してください。
 
     <span id='create__logo'></span>
 
